--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,8 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/filipturk/swappo-${{ env.SERVICE_NAME }}
+        images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/swappo-${{ env.SERVICE_NAME }}
+        # Note: github.repository_owner will be converted to lowercase by GHCR
         tags: |
           type=ref,event=branch
           type=sha,prefix={{branch}}-
@@ -112,7 +113,7 @@ jobs:
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.REGISTRY }}/filipturk/swappo-${{ env.SERVICE_NAME }}:${{ github.ref_name }}-${{ github.sha }}
+        image-ref: ${{ env.REGISTRY }}/${{ github.repository_owner }}/swappo-${{ env.SERVICE_NAME }}:${{ github.ref_name }}-${{ github.sha }}
         format: 'sarif'
         output: 'trivy-results.sarif'
         severity: 'CRITICAL,HIGH'
